--- a/index.html
+++ b/index.html
@@ -4,10 +4,27 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>David O'Sullivan - Front-end Web Developer</title>
+    <link rel="stylesheet" href="/dist/css/styles.min.css" />
   </head>
   <body>
-    <h1>Hello.</h1>
-    <h2>Testing.</h2>
+    <main>
+      <div class="page">
+        <div class="page__content">
+          <h1 class="page__name">David O.</h1>
+          <div class="page__links">
+            <a href="https://github.com/davidosull">GitHub</a>
+            <a href="https://instagram.com/osull.io">Instagram</a>
+            <a href="https://twitter.com/_osull">Twitter</a>
+          </div>
+          <p>Hello. My name is David and I build websites.</p>
+          <p>
+            To discuss an opportunity, please drop me an
+            <a href="mailto:david@osull.io">email</a>.
+          </p>
+        </div>
+      </div>
+    </main>
+    <script src="/dist/js/app.min.js"></script>
   </body>
 </html>
