--- a/index.html
+++ b/index.html
@@ -62,7 +62,10 @@
 
             <a href="https://twitter.com/_osull">Twitter</a>
           </div>
-          <p>Hello. My name is David and I build websites.</p>
+          <p>
+            Hi, I'm David and I build websites for small businesses and
+            startups.
+          </p>
           <p>
             To discuss an opportunity, please drop me an
             <a href="mailto:david@osull.io">email</a>.
