--- a/index.html
+++ b/index.html
@@ -62,10 +62,8 @@
 
             <a href="https://twitter.com/_osull">Twitter</a>
           </div>
-          <p>
-            Hi, I'm David and I build websites for small businesses and
-            startups.
-          </p>
+          <p>Hello, I'm David.</p>
+          <p>I build websites for small businesses and startups.</p>
           <p>
             To discuss an opportunity, please drop me an
             <a href="mailto:david@osull.io">email</a>.
